# choice-paralysis-be

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  pyproject.toml
choice_paralysis/src/: config.py  main.py
choice_paralysis/src/application/api/: middleware.py  router.py
choice_paralysis/src/application/api/match/: router.py  schemas.py
choice_paralysis/src/application/api/system/: health.py
choice_paralysis/src/domain/match/: entities.py  provider.py
choice_paralysis/src/infrastructure/: db.py  di.py  logging.py  models.py
tests/: conftest.py
tests/integration/api/match/: test_router.py
tests/unit/domain/match/: test_provider.py
