[project]
name = "choice-paralysis"
version = "0.1.0"
description = "Backlog Gladiator"
authors = [
    {name = "Alex Yanchenko", email = "oleksandr.yanchenko.ca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "greenlet>=3.2.4",
]

[project.scripts]
start = "choice_paralysis.src.main:start"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["choice_paralysis"]

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
